t_load now in array
