# docs/swagger.json
@@ -2796,6 +2796,10 @@
                     "description": "Название нагрузки",
                     "type": "string"
                 },
+                "t_load_id": {
+                    "description": "ID совокупности нагрузок за семестр",
+                    "type": "string"
+                },
                 "volume": {
                     "description": "Объем",
                     "type": "string"
@@ -2875,6 +2879,10 @@
                 "subject_name": {
                     "description": "Название предмета",
                     "type": "string"
+                },
+                "t_load_id": {
+                    "description": "ID совокупности нагрузок за семестр",
+                    "type": "string"
                 }
             }
         },
@@ -2922,6 +2930,11 @@
                 "wac": {
                     "description": "Индекс WaC",
                     "type": "boolean"
+                },
+                "works_id": {
+                    "description": "ID Совокупности научных работ за семестр",
+                    "type": "string",
+                    "format": "uuid"
                 },
                 "wos": {
                     "description": "Индекс WoS",
@@ -3153,6 +3166,10 @@
                 "students_amount": {
                     "description": "Количество студентов",
                     "type": "integer"
+                },
+                "t_load_id": {
+                    "description": "ID совокупности нагрузок за семестр",
+                    "type": "string"
                 }
             }
         },
@@ -3206,6 +3223,11 @@
                     "description": "Индекс WaC",
                     "type": "boolean"
                 },
+                "works_id": {
+                    "description": "ID Совокупности научных работ за семестр",
+                    "type": "string",
+                    "format": "uuid"
+                },
                 "wos": {
                     "description": "Индекс WoS",
                     "type": "boolean"
@@ -3241,6 +3263,11 @@
                     "description": "Дата начала проекта",
                     "type": "string",
                     "format": "date-time"
+                },
+                "works_id": {
+                    "description": "ID Совокупности научных работ за семестр",
+                    "type": "string",
+                    "format": "uuid"
                 }
             }
         },
@@ -3289,11 +3316,6 @@
                     "description": "Дата последнего обновления",
                     "type": "string",
                     "format": "date-time"
-                },
-                "works_id": {
-                    "description": "ID Совокупности научных работ за семестр",
-                    "type": "string",
-                    "format": "uuid"
                 },
                 "works_status": {
                     "description": "Статус проверки и подтверждения",
@@ -3612,10 +3634,6 @@
                         }
                     ]
                 },
-                "loads_id": {
-                    "description": "ID совокупности нагрузок за семестр",
-                    "type": "string"
-                },
                 "semester": {
                     "description": "Семестр",
                     "type": "integer"
@@ -3797,11 +3815,6 @@
                 "semester": {
                     "description": "Семестр",
                     "type": "integer"
-                },
-                "t_load_id": {
-                    "description": "ID совокупности всех нагрузок за семестр",
-                    "type": "string",
-                    "format": "uuid"
                 }
             }
         },
@@ -3818,11 +3831,6 @@
                 "semester": {
                     "description": "Семестр",
                     "type": "integer"
-                },
-                "t_load_id": {
-                    "description": "ID совокупности всех нагрузок за семестр",
-                    "type": "string",
-                    "format": "uuid"
                 }
             }
         },
@@ -3839,11 +3847,6 @@
                 "semester": {
                     "description": "Семестр",
                     "type": "integer"
-                },
-                "work_id": {
-                    "description": "ID совокупности всех научных работ за семестр",
-                    "type": "string",
-                    "format": "uuid"
                 }
             }
         },
@@ -3884,10 +3887,6 @@
                 },
                 "semester": {
                     "type": "integer"
-                },
-                "t_load_id": {
-                    "type": "string",
-                    "format": "uuid"
                 }
             }
         },
@@ -3914,11 +3913,6 @@
                 },
                 "semester": {
                     "type": "integer"
-                },
-                "work_id": {
-                    "description": "ID совокупности всех научных работ за семестр",
-                    "type": "string",
-                    "format": "uuid"
                 }
             }
         },
@@ -3934,11 +3928,6 @@
                 },
                 "semester": {
                     "type": "integer"
-                },
-                "work_id": {
-                    "description": "ID совокупности всех научных работ за семестр",
-                    "type": "string",
-                    "format": "uuid"
                 }
             }
         }
