# internal/pkg/models/mapping.go
@@ -81,7 +81,7 @@ func MapSemesterProgressToDomain(progresses []SemesterProgressRequest, status mo
 	return dProgresses, nil
 }
 
-func MapPublicationsToDomain(publications []Publication, workID uuid.UUID) (dPublicationsInsert, dPublicationsUpdate []model.Publications, err error) {
+func MapPublicationsToDomain(publications []Publication) (dPublicationsInsert, dPublicationsUpdate []model.Publications, err error) {
 	for _, publication := range publications {
 		var status model.PublicationStatus = ""
 		if err := status.Scan(strings.TrimSpace(lo.FromPtr(publication.Status))); err != nil {
@@ -89,7 +89,7 @@ func MapPublicationsToDomain(publications []Publication, workID uuid.UUID) (dPub
 		}
 
 		dPublication := model.Publications{
-			WorksID:    workID,
+			WorksID:    publication.WorksID,
 			Name:       lo.FromPtr(publication.Name),
 			Scopus:     lo.FromPtr(publication.Scopus),
 			Rinc:       lo.FromPtr(publication.Rinc),
@@ -114,7 +114,7 @@ func MapPublicationsToDomain(publications []Publication, workID uuid.UUID) (dPub
 	return dPublicationsInsert, dPublicationsUpdate, nil
 }
 
-func MapConferencesToDomain(conferences []Conference, workID uuid.UUID) (dConferencesInsert, dConferencesUpdate []model.Conferences, err error) {
+func MapConferencesToDomain(conferences []Conference) (dConferencesInsert, dConferencesUpdate []model.Conferences, err error) {
 	for _, conf := range conferences {
 		var status model.ConferenceStatus = ""
 		if err := status.Scan(strings.TrimSpace(lo.FromPtr(conf.Status))); err != nil {
@@ -122,7 +122,7 @@ func MapConferencesToDomain(conferences []Conference, workID uuid.UUID) (dConfer
 		}
 
 		dConf := model.Conferences{
-			WorksID:        workID,
+			WorksID:        conf.WorksID,
 			Status:         status,
 			Scopus:         lo.FromPtr(conf.Scopus),
 			Rinc:           lo.FromPtr(conf.Rinc),
@@ -146,10 +146,10 @@ func MapConferencesToDomain(conferences []Conference, workID uuid.UUID) (dConfer
 	return dConferencesInsert, dConferencesUpdate, nil
 }
 
-func MapResearchProjectToDomain(projects []ResearchProject, workID uuid.UUID) (dResearchInsert, dResearchUpdate []model.ResearchProjects) {
+func MapResearchProjectToDomain(projects []ResearchProject) (dResearchInsert, dResearchUpdate []model.ResearchProjects) {
 	for _, proj := range projects {
 		dProj := model.ResearchProjects{
-			WorksID:     workID,
+			WorksID:     proj.WorksID,
 			ProjectName: lo.FromPtr(proj.ProjectName),
 			StartAt:     lo.FromPtr(proj.StartAt),
 			EndAt:       lo.FromPtr(proj.EndAt),
@@ -169,7 +169,7 @@ func MapResearchProjectToDomain(projects []ResearchProject, workID uuid.UUID) (d
 	return dResearchInsert, dResearchUpdate
 }
 
-func MapClassroomLoadToDomain(loads []ClassroomLoad, tLoadID uuid.UUID) (dLoadInsert, dLoadUpdate []model.ClassroomLoad, err error) {
+func MapClassroomLoadToDomain(loads []ClassroomLoad) (dLoadInsert, dLoadUpdate []model.ClassroomLoad, err error) {
 	for _, load := range loads {
 		var loadType model.ClassroomLoadType
 		if err := loadType.Scan(strings.TrimSpace(lo.FromPtr(load.LoadType))); err != nil {
@@ -177,7 +177,7 @@ func MapClassroomLoadToDomain(loads []ClassroomLoad, tLoadID uuid.UUID) (dLoadIn
 		}
 
 		dLoad := model.ClassroomLoad{
-			TLoadID:     tLoadID,
+			TLoadID:     load.TLoadID,
 			Hours:       lo.FromPtr(load.Hours),
 			LoadType:    loadType,
 			MainTeacher: lo.FromPtr(load.MainTeacher),
@@ -196,10 +196,10 @@ func MapClassroomLoadToDomain(loads []ClassroomLoad, tLoadID uuid.UUID) (dLoadIn
 	return dLoadInsert, dLoadUpdate, nil
 }
 
-func MapIndividualWorkToDomain(loads []IndividualStudentsLoad, tLoadID uuid.UUID) (dLoadInsert, dLoadUpdate []model.IndividualStudentsLoad, err error) {
+func MapIndividualWorkToDomain(loads []IndividualStudentsLoad) (dLoadInsert, dLoadUpdate []model.IndividualStudentsLoad, err error) {
 	for _, load := range loads {
 		dLoad := model.IndividualStudentsLoad{
-			TLoadID:        tLoadID,
+			TLoadID:        load.TLoadID,
 			StudentsAmount: lo.FromPtr(load.StudentsAmount),
 			Comment:        load.Comment,
 		}
@@ -221,10 +221,10 @@ func MapIndividualWorkToDomain(loads []IndividualStudentsLoad, tLoadID uuid.UUID
 	return dLoadInsert, dLoadUpdate, nil
 }
 
-func MapAdditionalLoadToDomain(loads []AdditionalLoad, tLoadID uuid.UUID) (dLoadInsert, dLoadUpdate []model.AdditionalLoad) {
+func MapAdditionalLoadToDomain(loads []AdditionalLoad) (dLoadInsert, dLoadUpdate []model.AdditionalLoad) {
 	for _, load := range loads {
 		dLoad := model.AdditionalLoad{
-			TLoadID: tLoadID,
+			TLoadID: load.TLoadID,
 			Name:    lo.FromPtr(load.Name),
 			Volume:  load.Volume,
 			Comment: load.Comment,
